--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.28.1
-pandas==2.1.3
+pandas>=2.2.0
 sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.10
 pymysql==1.1.0
 reportlab==4.0.7
 python-dotenv==1.0.0
@@ -9,4 +9,4 @@ passlib[bcrypt]==1.7.4
 cryptography>=42.0.5
 altair>=5.0.0
 pyarrow>=14.0.1
-pillow==9.5.0 
+pillow>=10.0.0
